<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@android:color/holo_purple"
	tools:context="net.pantas.truefalsequiz.CheatActivity">

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="0dp"
		android:layout_marginEnd="8dp"
		android:layout_marginLeft="8dp"
		android:layout_marginRight="8dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="24dp"
		android:text="@string/cheat_are_you_sure_you_want_to_see_the_answer"
		android:textColor="@android:color/white"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<TextView
		android:id="@+id/cheat_answer"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="8dp"
		android:layout_marginEnd="8dp"
		android:layout_marginLeft="8dp"
		android:layout_marginRight="8dp"
		android:layout_marginStart="8dp"
		android:textColor="@android:color/white"
		android:textSize="18sp"
		android:visibility="invisible"
		app:layout_constraintBottom_toBottomOf="@+id/guideline2"
		app:layout_constraintTop_toTopOf="@+id/guideline2"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		tools:text="TRUE" />

	<Button
		android:id="@+id/cheat_reveal_btn"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:text="@string/cheat_btn_reveal"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintBottom_toBottomOf="@+id/guideline2"
		app:layout_constraintTop_toTopOf="@+id/guideline2"
		android:onClick="onClickBtnCheatReveal"/>

	<Button
		android:id="@+id/cheat_back_btn"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="8dp"
		android:layout_marginLeft="8dp"
		android:layout_marginRight="8dp"
		android:text="@string/cheat_btn_back"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		android:onClick="onClickBtnCheatBack"/>

	<android.support.constraint.Guideline
		android:id="@+id/guideline2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintGuide_percent="0.5" />
</android.support.constraint.ConstraintLayout>
